k8s/holo/holo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: castuo-holo-api-service
  namespace: castuo-system
  labels:
    app: castuo-holo-api
spec:
  selector:
    app: castuo-holo-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
